changed index form buttons' method from get to post, and did the same in dares route to get those working.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,17 +9,17 @@
     <p>Welcome to <%= title %></p>
     <a href="/sign-in">Sign in with Instagram</a>
 
-    <form action="/dares" method="get">
+    <form action="/dares" method="post">
       <input type="hidden" name="category" value="miscellaneous">
       <input type="submit" value="Miscellaneous Dares">
     </form>
 
-    <form action="/dares" method="get">
+    <form action="/dares" method="post">
       <input type="hidden" name="category" value="family">
       <input type="submit" value="Family Dares">
     </form>
 
-    <form action="/dares" method="get">
+    <form action="/dares" method="post">
       <input type="hidden" name="category" value="party">
       <input type="submit" value="Party Dares">
     </form>
