--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -5,6 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <p> OK.  we got the Instagram user info,</p>
+    <p>but we aren't doing anything with it! :( </p>
     <h1>Welcome, <%= user %>!</h1>
 
     <img src="<%= image %>" width="200" />
