--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,39 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Almost Shameless</title>
+    <title>Authentication with Passport and Express</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   </head>
 
-
   <body>
-    <h1>Layout Playout</h1>
-
     <nav class="navbar navbar-default">
       <div class="container">
-
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
+            <span class="sr-only">New Dare (button not connected)</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Almost Shameless</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="user-menu">
-          <ul class="nav navbar-nav navbar-right">
-            <% if (currentUser) { %>
-              <li><a href="/logout">Logout</a></li>
-            <% } else { %>
-              <li><a href="/login">Login</a></li>
-              <li><a href="/signup">Signup</a></li>
-            <% } %>
-            <li><a href="/secret">Secret page (only if authenticated)</a></li>
-          </ul>
+          <a class="navbar-brand" href="/">Log out</a>
         </div>
       </div>
     </nav>
@@ -42,8 +24,6 @@
     <main class="container">
       <%- body %>
     </main>
-
-
 
   </body>
 </html>
