--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Authentication with Passport and Express</title>
+    <title>Almost Shameless</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   </head>
 
