made new branch for css

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Almost Shameless</title>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap.min.css">
   </head>
 
   <body>
