--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Welcome!</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/css/style.css' />
   </head>
   <body>
     <p> OK.  we got the Instagram user info,</p>
