changed button class on index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <p>Welcome to <%= title %></p>
     <a href="/sign-in">Sign in with Instagram</a>
 
-<div>
+<div class="formButtons">
     <form  action="/dares" method="post">
       <input type="hidden" name="category" value="miscellaneous">
       <input type="submit" value="Miscellaneous Dares">
