--- a/views/dare.ejs
+++ b/views/dare.ejs
@@ -3,7 +3,6 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
   </head>
   <body>
     <h1><%= title %></h1>
@@ -30,11 +29,9 @@
       <input type="submit" value="I'll do it">
     </form> -->
 
-<script type="text/javascript">
-$().on('click', function() {
-  // ajax
-});
-</script>
+
+ <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="/javascripts/main.js"></script>
 
   </body>
 </html>
