--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Log out</a>
+          <a class="navbar-brand" href="/sign-out">Log out</a>
         </div>
       </div>
     </nav>
