--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/css/style.css' />
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>BOOOOYAH</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="generator" content="Webflow">
+  <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="../css/webflow.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]
+      }
+    });
+  </script>
+  <script type="text/javascript" src="https://use.typekit.net/tgy6upv.js"></script>
+  <script type="text/javascript">
+    try{Typekit.load();}catch(e){}
+  </script>
+  <script type="text/javascript" src="../js/modernizr.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
+  <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
+  <style type="text/css">
+  </style>
+</head>
+
+<body>
+  <div class="w-section fullscreen-image-hover-section">
+    <div class="fullscreen-image-title-container">
+      <div class="w-container">
+        <h1 class="h1-centered">Almost Shameless!</h1><a href="#" data-ix="fullscreen-image-hover-1" class="fullscreen-image-title">Mischief</a><a href="#" data-ix="fullscreen-image-hover-2" class="fullscreen-image-title">Fearless</a><a href="#" data-ix="fullscreen-image-hover-3" class="fullscreen-image-title">Shameless</a>
+      </div>
+    </div>
+    <div class="fullscreen-image-container-1"></div>
+    <div data-ix="photo-zoom" class="fullscreen-image-container-2"></div>
+    <div class="fullscreen-image-container-3"></div>
+  </div>
+  <div>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <a href="/sign-in">Sign in with Instagram</a>
@@ -23,6 +57,10 @@
       <input type="hidden" name="category" value="party">
       <input type="submit" value="Party Dares">
     </form>
+  </div>
 
-  </body>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="../js/webflow.js"></script>
+
+</body>
 </html>
