html changes to dares view

--- a/views/dare.ejs
+++ b/views/dare.ejs
@@ -17,8 +17,6 @@
 
 <!-- chicken out button -->
     <form action="" method="">
-      <!-- <input type="hidden" name="dareID" value="<%= dare._id %>">
-      <input type="hidden" name="userID" value="<%= user._id %>"> -->
       <input type="hidden" name="category" value="<%= dare.category %>">
       <input type="submit" value="Chicken Out" id="chicken-out">
     </form>
@@ -32,6 +30,13 @@
       <input type="hidden" name=" " value=" ">
       <input type="submit" value="I'll do it">
     </form> -->
+
+
+    </br>
+    </br>
+
+    <h4> Accepted Dares </h4>
+    <p> List of accepted dares gets ajax-ed here</p>
 
 
  <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
