--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/sign-out">Log out</a>
+          <% if (user){ %>
+          <span class="navbar-brand"><%=  'hi ' + user; %></span>
+          <% } else {  %>
+            <a class="navbar-brand" href="/sign-out"><%= 'Log out' %></a>
+          <% } %>
         </div>
       </div>
     </nav>
