--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,16 +135,16 @@ p {
 }
 
 .fullscreen-image-title-container {
-  position: absolute;
+  /*position: absolute;*/
   left: 0px;
   top: 30%;
   right: 0px;
   z-index: 1;
   padding: 20px 55px;
   background-color: hsla(0, 0%, 100%, .5);
-  -webkit-transform: translate(0px, -30%);
+  /*-webkit-transform: translate(0px, -30%);
   -ms-transform: translate(0px, -30%);
-  transform: translate(0px, -30%);
+  transform: translate(0px, -30%);*/
   text-align: center;
 }
 
