--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,9 @@
   <script type="text/javascript">
     try{Typekit.load();}catch(e){}
   </script>
-  <script type="text/javascript" src="../js/modernizr.js"></script>
+  <script type="text/javascript" src="/js/modernizr.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
   <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
-  <style type="text/css">
-    </style>
 </head>
 
 
@@ -63,7 +61,7 @@
 
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script type="text/javascript" src="../js/webflow.js"></script>
+<script type="text/javascript" src="/js/webflow.js"></script>
 
 </body>
 </html>
