--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
       }
     });
   </script>
-  <script type="text/javascript" src="https://use.typekit.net/tgy6upv.js"></script>
+<!-- <script type="text/javascript" src="https://use.typekit.net/tgy6upv.js"></script>
   <script type="text/javascript">
     try{Typekit.load();}catch(e){}
-  </script>
+  </script> -->
   <script type="text/javascript" src="../js/modernizr.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
   <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
@@ -30,6 +30,8 @@
 
 <body>
  <a href="/sign-in">Sign in with Instagram</a>
+
+
  <div class="w-section fullscreen-image-hover-section">
    <div class="fullscreen-image-title-container">
      <div class="w-container">
