--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,20 @@ h1 {
   text-transform: none;
 }
 
+.formButtons {
+   margin-top: 0px;
+   margin-bottom: 10px;
+   padding-left: 0px;
+   background-color: transparent;
+   font-family: museo-sans, sans-serif;
+   color: #000;
+   font-size: 58px;
+   line-height: 63px;
+   font-weight: 700;
+   text-align: left;
+   text-transform: none;
+}
+
 h2 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -80,13 +94,6 @@ p {
   font-weight: 400;
 }
 
-.fullscreen-image-hover-section {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
 .fullscreen-image-container-1 {
   position: absolute;
   left: 0px;
@@ -132,6 +139,13 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 0;
+}
+
+.fullscreen-image-hover-section {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 800px;
 }
 
 .fullscreen-image-title-container {
