--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,9 @@
      <div class="w-container">
       <h1 class="h1-centered">🅐🅛🅜🅞🅢🅣</h1>
       <h1 class="h1-centered"> 🅢🅗🅐🅜🅔🅛🅔🅢🅢</h1>
-      <a href="#" data-ix="fullscreen-image-hover-1" class="fullscreen-image-title">Fam</a><a href="#" data-ix="fullscreen-image-hover-2" class="fullscreen-image-title">Homies</a><a href="#" data-ix="fullscreen-image-hover-3" class="fullscreen-image-title">Strangers</a>
+      <a href="/dares" data-ix="fullscreen-image-hover-1" class="fullscreen-image-title" input type="hidden" name="category" value="miscellaneous">Fam</a>
+      <a href="#" data-ix="fullscreen-image-hover-2" class="fullscreen-image-title">Homies</a>
+      <a href="#" data-ix="fullscreen-image-hover-3" class="fullscreen-image-title">Strangers</a>
      </div>
    </div>
    <div class="fullscreen-image-container-1"></div>
