--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,8 +7,9 @@
   <body>
     <% if (user){ %>
     <span class="navbar-brand"><%=  'hi ' + user; %></span>
+    <a class="navbar-brand" href="/sign-out"><%= 'Log out' %></a>
     <% } else {  %>
-      <a class="navbar-brand" href="/sign-out"><%= 'Log out' %></a>
+    <a class="navbar-brand" href="/sign-in"><%= 'Sign in with Instagram!' %></a>
     <% } %>
 
     <main class="container">
