fixed double instagram html issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>BOOOOYAH</title>
+  <title>Almost Shameless</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="generator" content="Webflow">
   <link rel="stylesheet" type="text/css" href="/css/normalize.css">
@@ -29,8 +29,6 @@
 
 
 <body>
-
- <a href="/sign-in">Sign in with Instagram</a>
 
  <div class="w-section fullscreen-image-hover-section">
    <div class="fullscreen-image-title-container">
