added navbar to index:

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <% if (user){ %>
-    <span class="navbar-brand"><%=  'hi ' + user; %></span>
+    <span class="navbar-brand"><%=  'Welcome, ' + user; %></span>
     <a class="navbar-brand" href="/sign-out"><%= 'Log out' %></a>
     <% } else {  %>
     <a class="navbar-brand" href="/sign-in"><%= 'Sign in with Instagram!' %></a>
@@ -15,9 +15,42 @@
             <!-- <a class="navbar-brand" href="/sign-out">Log out</a> -->
 
 
+  <nav class="navbar navbar-fixed-left navbar-minimal animate" role="navigation">
+    <div class="navbar-toggler animate">
+      <span class="menu-icon"></span>
+    </div>
+    <ul class="navbar-menu animate">
+      <li>
+        <a href="#about-us" class="animate">
+          <span class="desc animate"> Sign in with Instagram! </span>
+          <span class="glyphicon glyphicon-user"></span>
+        </a>
+      </li>
+      <li>
+        <a href="#blog" class="animate">
+          <span class="desc animate"> How to play </span>
+          <span class="glyphicon glyphicon-info-sign"></span>
+        </a>
+      </li>
+      <li>
+        <a href="#contact-us" class="animate">
+          <span class="desc animate"> My dares </span>
+          <span class="glyphicon glyphicon-comment"></span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+
+
     <main class="container">
       <%- body %>
     </main>
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="/javascripts/main.js"></script>
+
 
   </body>
 </html>
