--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,30 @@
 
 <body>
 
+   <h1>Never have I ever (tutorial)</h1>
+           <div id="wrapper">
+               <ul>
+                   <li>
+                       <input type="checkbox" checked>
+                       <i></i>
+                       <h2>What is Lorem Ipsum ?</h2>
+                       <p>Lorem Ipsum is s.</p>
+                   </li>
+                   <li>
+                       <input type="checkbox" checked>
+                       <i></i>
+                       <h2>Why do we use it ?</h2>
+                       <p>It is a long estars, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                   </li>
+                   <li>
+                       <input type="checkbox" checked>
+                       <i></i>
+                       <h2>Wher we can it ?</h2>
+                       <p>There are many vrate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+                   </li>
+               </ul>
+           </div>
+
  <div class="w-section fullscreen-image-hover-section">
    <div class="fullscreen-image-title-container">
      <div class="w-container">
