--- a/views/dare.ejs
+++ b/views/dare.ejs
@@ -29,14 +29,15 @@
   </head>
 
 
-  <body>
+  <body class=dareBody>
+    <div class="dareDescription">
         <section class="<%= title %>">
         <h1><%= title %></h1>
         <p id="category">Category: <span><%= dare.category %></span></p>
         <p id="description">Dare: <span><%= dare.description %></span></p>
         <p id="hashtag">Hashtag: <span><%= dare.hashtag %></span></p>
         </section>
-
+    </div>
 
     <!-- chicken out button -->
         <form data-ix="fullscreen-image-hover-3" action="" method="">
