made changes to css:

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -314,7 +314,7 @@ p {
   .dareDescription {
     border: 1px solid black;
     margin-bottom: 30px;
-    background-color: white;
+    background-color: turquoise;
     padding: 10px;
   }
 
