--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,11 +15,7 @@
 <!-- the following line, I believe, was added in error while the code above was deleted Jason H -->
             <!-- <a class="navbar-brand" href="/sign-out">Log out</a> -->
 
-
-
-
-
-
+    <% end %>
     <main class="container">
       <%- body %>
     </main>
