fixed conditional sign-in buttons in layout view

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
 
 </head>
   <body>
-    <% if (global.user){ %>
+    <% if (user){ %>
     <span class="navbar-brand"><%=  'Welcome, ' + user + '  '; %><a href="/sign-out"><%= 'Log out' %></a></span>
 
     <% } else {  %>
