--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,8 +272,10 @@ p {
 
 /*dare view css*/
   .dareDescription {
-    border: 1px solid black;
+    border: 4px solid #03A9F4;
+    border-radius: 50px;
     margin-bottom: 30px;
+    margin-top: 100px;
     padding: 10px;
   }
 
