css changes to dares page

--- a/views/dare.ejs
+++ b/views/dare.ejs
@@ -9,8 +9,8 @@
       <link rel="stylesheet" type="text/css" href="/css/normalize.css">
       <link rel="stylesheet" type="text/css" href="/css/webflow.css">
       <link rel="stylesheet" type="text/css" href="/css/style.css">
-        <link rel="stylesheet" type="text/css" href="/css/animate.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+     <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
       <script>
         WebFont.load({
           google: {
@@ -35,7 +35,7 @@
     <div class="dareDescription">
         <section class="<%= title %>">
         <p id="description"><span><%= dare.description %></span></p>
-        <p id="hashtag">Hashtag: <span><%= dare.hashtag %></span></p>
+        <p id="hashtag"><span><%= dare.hashtag %></span></p>
         </section>
     </div>
 
