--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,7 +272,8 @@ p {
 
 /*dare view css*/
   .dareDescription {
-    border: 4px solid #03A9F4;
+    border: 4px solid #fa576a;
+    background-color: #fa576a;
     border-radius: 50px;
     margin-bottom: 30px;
     margin-top: 100px;
@@ -290,6 +291,29 @@ p {
 
   }
 
+  #category {
+    font-family: 'Amatic SC', cursive;
+    font-size: 100px;
+    text-align: center;
+    color: #525151;
+  }
+
+  #chicken-out {
+    font-family: 'Amatic SC', cursive;
+    font-size: 30px;
+  }
+
+#do-it {
+  font-family: 'Amatic SC', cursive;
+    font-size: 30px;
+}
+
+#description {
+font-family: 'Shadows Into Light', cursive;
+  font-size: 30px;
+  padding: 20px;
+  color: #525151;
+}
 
   /*end dare view css*/
 
@@ -311,7 +335,7 @@ p {
     width: 100%;
     min-height: 100%;
   }
-<<<<<<< HEAD
+
 
   @media (min-width: 768px) {
     .navbar-minimal.open {
