--- a/views/dare.ejs
+++ b/views/dare.ejs
@@ -10,7 +10,8 @@
       <link rel="stylesheet" type="text/css" href="/css/webflow.css">
       <link rel="stylesheet" type="text/css" href="/css/style.css">
      <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+ <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
       <script>
         WebFont.load({
           google: {
