--- a/views/userdare.ejs
+++ b/views/userdare.ejs
@@ -26,14 +26,16 @@
        </tr>
      </thead>
      <tbody>
+
        <tr>
-         <td data-content="This is a very long label">
+         <td data-content="dare_id: 1">
            Dare 1 prompt
          </td>
          <td data-content="Subject">
            <div class="media ">
              <span class="img">
                <img src="http://i.imgur.com/iBghAV7.jpg" alt="me" />
+               <!-- <img src="<%= dare.image_url %>" alt="me" />                -->
              </span>
              <div class="bd">
                #ShooterMcGavin
@@ -47,6 +49,8 @@
            Waiting
          </td>
        </tr>
+
+
        <tr>
          <td data-content="Task">
            Double Dare
