--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/css/webflow.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <script>
     WebFont.load({
       google: {
@@ -35,6 +36,7 @@
      <div class="w-container">
       <h1 class="h1-centered">🅐🅛🅜🅞🅢🅣</h1>
       <h1 class="h1-centered"> 🅢🅗🅐🅜🅔🅛🅔🅢🅢</h1>
+      <p id="gameDescription"><strong>Sign in through Instagram to play our dare game! Pick a category and find a dare you're willing to try. To prove you've done it, post a photo of your completed dare on Instagram with our special dare hashtags.</strong></p>
        <form data-ix="fullscreen-image-hover-1" action="/dares" method="post">
           <input type="hidden" name="category" value="family">
           <input type="submit" class="fullscreen-image-title" value="Family Dares">
