--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Almost Shameless</title>
+     <link rel="stylesheet" type="text/css" href="/css/rules.css">
    <link href='https://fonts.googleapis.com/css?family=Gilda+Display' rel='stylesheet' type='text/css'>
 </head>
   <body>
