--- a/views/userdare.ejs
+++ b/views/userdare.ejs
@@ -15,7 +15,6 @@
 <!-- We can use a small j-script to put the data-content on the td's based on the content of the th. -->
    <h1 id="hallOfFame">Hall of Fame and Shame</h1>
       <p>Put on your gameface</p>
-
    <table>
      <thead>
        <tr>
@@ -26,19 +25,20 @@
        </tr>
      </thead>
      <tbody>
-
        <tr>
-         <td data-content="dare_id: 1">
-           Dare 1 prompt
+         <td data-content="This is a very long label">
+            <h2>Welcome to the Thunderdome</h2>
+            <p>
+              Don't be scared
+            </p>
          </td>
          <td data-content="Subject">
            <div class="media ">
              <span class="img">
-               <img src="http://i.imgur.com/iBghAV7.jpg" alt="me" />
-               <!-- <img src="<%= dare.image_url %>" alt="me" />                -->
+               <img src="http://i.imgur.com/IIxea1j.jpg" alt="me" />
              </span>
              <div class="bd">
-               #ShooterMcGavin
+               #Thunderdome
              </div>
            </div>
          </td>
@@ -46,24 +46,26 @@
            <time datetime="2016-23-03">#</time>
          </td>
          <td data-content="Process Status">
-           Waiting
+           Pending. Get after it!
          </td>
        </tr>
 
-
        <tr>
          <td data-content="Task">
-           Double Dare
+            <h2>If you know you're going over the edge...</h2>
+            <p>
+              ...what's the point in slowing down?
+            </p>
          </td>
          <td data-content="Subject">
            <div class="media ">
              <span class="img">
-               <img src="http://i.imgur.com/zvNjaXk.jpg" alt="me" />
+               <img src="http://i.imgur.com/FyHXvTc.jpg" alt="me" />
              </span>
              <div class="bd">
-               #fountainOfKnowledge
+               #leapoffaith
                <br>
-               #badKnowledge
+               #realchicken
              </div>
            </div>
          </td>
@@ -71,20 +73,22 @@
            <time datetime="2016-23-03">04-12-2016</time>
          </td>
          <td data-content="Process Status">
-           Waiting
+           Done!
          </td>
        </tr>
+
        <tr>
          <td data-content="Task">
-           Triple dog dare!
+            <h2>What has two thumbs and beat down Ronald McDonald?</h2>
+            <p>This guy. Obviously.
          </td>
          <td data-content="Subject">
            <div class="media ">
              <span class="img">
-               <img src="http://i.imgur.com/t2e811A.jpg" alt="me" />
+               <img src="http://i.imgur.com/5czBm9c.jpg" alt="me" />
              </span>
              <div class="bd">
-               #pyramidBuiltInADay
+               #doubledown
              </div>
            </div>
          </td>
@@ -92,9 +96,90 @@
            <time datetime="2016-23-03">04-14-2016</time>
          </td>
          <td data-content="Process Status">
-           Waiting
+           Chickened Out
          </td>
        </tr>
+
+      <tr>
+       <td data-content="Task">
+          <h2>Game recognize game</h2>
+          <p>Go on. Get weird.
+       </td>
+       <td data-content="Subject">
+         <div class="media ">
+           <span class="img">
+             <img src="http://i.imgur.com/nShIsT5.jpg" alt="me" />
+           </span>
+           <div class="bd">
+             #yomummyjokes
+             <br>
+             #tuttut
+           </div>
+         </div>
+       </td>
+       <td data-content="Completed Date">
+         <time datetime="2016-23-03">04-12-2016</time>
+       </td>
+       <td data-content="Process Status">
+         Done!
+       </td>
+      </tr>
+
+
+      <tr>
+        <td data-content="Task">
+           <h2>No rules on a bender</h2>
+           <p>
+             Judge away pal. You read about weird. I live weird.
+           </p>
+        </td>
+        <td data-content="Subject">
+          <div class="media ">
+            <span class="img">
+              <img src="http://i.imgur.com/qOAbF5c.jpg" alt="me" />
+            </span>
+            <div class="bd">
+              #consequences
+              <br>
+              #nocontext
+            </div>
+          </div>
+        </td>
+        <td data-content="Completed Date">
+          <time datetime="2016-23-03">04-12-2016</time>
+        </td>
+        <td data-content="Process Status">
+          Done!
+        </td>
+      </tr>
+
+
+      <tr>
+        <td data-content="Task">
+           <h2>My other vehicle is...</h2>
+           <p>
+             ...just try and guess.
+        </td>
+        <td data-content="Subject">
+          <div class="media ">
+            <span class="img">
+              <img src="http://i.imgur.com/FkjcMPa.jpg" alt="me" />
+            </span>
+            <div class="bd">
+              #capitalistcowboy
+              <br>
+              #urbandomestication
+            </div>
+          </div>
+        </td>
+        <td data-content="Completed Date">
+          <time datetime="2016-23-03">04-12-2016</time>
+        </td>
+        <td data-content="Process Status">
+          Done!
+        </td>
+      </tr>
+
      </tbody>
    </table>
 
